Change name into casio menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,21 @@
 # toolchain file and module path of the fxSDK
 
 cmake_minimum_required(VERSION 3.15)
-project(MyAddin)
+project(PhotoCasio)
 
 include(GenerateG1A)
 include(GenerateG3A)
 include(Fxconv)
 find_package(Gint 2.9 REQUIRED)
+find_package(cPNG 1.5.30 REQUIRED)
+target_link_libraries(<TARGET> PRIVATE cPNG::cPNG)
 
 set(SOURCES
   src/main.c
   src/utils.c
   src/draw.c
   src/text.c
+  src/storage.c
 )
 
 set(ASSETS_cg
@@ -35,8 +38,8 @@ target_link_libraries(myaddin Gint::Gint)
 
 if("${FXSDK_PLATFORM_LONG}" STREQUAL fx9860G)
   generate_g1a(TARGET myaddin OUTPUT "Photocasio.g3a"
-    NAME "MyAddin" ICON assets-fx/icon.png)
+    NAME "PhotoCasio" ICON assets-fx/icon.png)
 elseif("${FXSDK_PLATFORM_LONG}" STREQUAL fxCG50)
   generate_g3a(TARGET myaddin OUTPUT "Photocasio.g3a"
-    NAME "MyAddin" ICONS assets-cg/icon-uns.png assets-cg/icon-sel.png)
+    NAME "PhotoCasio" ICONS assets-cg/icon-uns.png assets-cg/icon-sel.png)
 endif()
