fix small key bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ include(GenerateG3A)
 include(Fxconv)
 find_package(Gint 2.9 REQUIRED)
 find_package(cPNG 1.5.30 REQUIRED)
-target_link_libraries(<TARGET> PRIVATE cPNG::cPNG)
+find_package(cZlib 1.2.5 REQUIRED)
 
 set(SOURCES
   src/main.c
@@ -34,7 +34,7 @@ fxconv_declare_assets(${ASSETS} ${ASSETS_fx} ${ASSETS_cg} WITH_METADATA)
 
 add_executable(myaddin ${SOURCES} ${ASSETS} ${ASSETS_${FXSDK_PLATFORM}})
 target_compile_options(myaddin PRIVATE -Wall -Wextra -Os)
-target_link_libraries(myaddin Gint::Gint)
+target_link_libraries(myaddin Gint::Gint cPNG::cPNG cZlib::cZlib)
 
 if("${FXSDK_PLATFORM_LONG}" STREQUAL fx9860G)
   generate_g1a(TARGET myaddin OUTPUT "Photocasio.g3a"
